--- a/HW2/Makefile
+++ b/HW2/Makefile
@@ -1,7 +1,7 @@
 WARNING = -Wall -Wshadow --pedantic
 ERROR = -Wvla -Werror
 GCC = gcc -std=c99 -g $(WARNING) $(ERROR)
-SRCS = addnum.c
+SRCS = subnum.c
 
 OBJS = $(SRCS:%.c=%.o)
 
@@ -16,11 +16,11 @@ test: test1 test2
 
 test1: main
 	./main inputs/test1 > output1
-	diff output1 expected/answer1
+	diff -w output1 expected/answer1
 
 test2: main
 	./main inputs/test2 > output2
-	diff output2 expected/answer1
+	diff -w output2 expected/answer2
 
 clean: # remove all machine generated files
 	rm -f main *.o output?
